# naqsha

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  llm.txt  mkdocs.yml  naqsha.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: cli.md  concepts.md  gen_ref_pages.py  getting-started.md  index.md  llm.txt  memory.md  migration.md  reflection-patch-review.md  reflection.md  teams.md  tools.md
docs/adr/: 0001-qaoa-trace-and-nap-action-protocol.md  0002-enforce-tool-policy-in-runtime.md  0003-allow-reviewed-reflection-patches.md  0004-use-local-simplemem-cross-as-default-memory.md  0005-agent-workbench-and-reviewed-self-improvement.md  0006-autonomous-updates-with-rollback.md  0007-global-runtime-local-agent-workspaces.md  0008-rich-tui-for-agent-workbench.md  0009-decorator-driven-api.md  0010-mkdocs-material-documentation.md  0011-dynamic-memory-engine.md  0012-multi-agent-teams-and-memory-scopes.md  0013-tool-based-delegation-model.md  0014-hierarchical-qaoa-trace.md  0015-typed-event-bus.md  0016-context-aware-dependency-injection.md  0017-strict-internal-protocol-thin-adapters.md  0018-structured-error-escalation-circuit-breakers.md  0019-domain-driven-src-layout.md
docs/handoff/: 0001-v1-development-workflow.md  0002-v2-development-workflow.md
docs/prd/: 0001-naqsha-v1-runtime.md  0002-naqsha-v2-runtime.md
docs/redteam/: owasp-llm-top10-mapping.md
docs/release/: 0001-v1-agent-workbench-acceptance.md  pypi-checklist.md
docs/user-guide/: 01-getting-started.md  02-architecture-and-concepts.md  03-run-profiles-and-cli.md  04-library-traces-eval-and-reflection.md  README.md
examples/: decorator_api_demo.py
examples/profiles/: README.md  anthropic.example.json  gemini.example.json  local-fake.json  ollama.example.toml  openai-compat.example.json  simplemem-cross-fake.json
sandbox/: README.md
sandbox/live/: .gitignore  README.md  run-live-checks.sh
sandbox/live/profiles/: gemini-live-auto.json  gemini-live.json  openai-live-auto.json  openai-live.json
src/naqsha/: __init__.py  __main__.py  approvals.py  budgets.py  cli.py  eval_fixtures.py  policy.py  profiles.py  project.py  replay.py  runtime.py  sanitizer.py  scheduler.py  trace_scan.py  wiring.py
src/naqsha/bundled_profiles/: __init__.py
src/naqsha/core/: __init__.py  circuit_breaker.py  event_bus.py  events.py  policy.py  runtime.py  scheduler.py
src/naqsha/memory/: __init__.py  base.py  ddl.py  engine.py  inmemory.py  retrieval.py  scope.py  sharing.py  simplemem_cross.py
src/naqsha/models/: __init__.py  anthropic.py  base.py  errors.py  factory.py  fake.py  gemini.py  http_json.py  nap.py  ollama.py  openai_compat.py  trace_replay.py  trace_turns.py
src/naqsha/orchestration/: __init__.py  delegation.py  team_runtime.py  topology.py
src/naqsha/protocols/: __init__.py  nap.py  qaoa.py
src/naqsha/reflection/: __init__.py  base.py  candidate.py  config.py  loop.py  reliability_gate.py  rollback.py  workspace.py
src/naqsha/tools/: __init__.py  base.py  context.py  decorated_adapter.py  decorator.py  executor.py  http_utils.py  json_patch.py  memory_schema.py  registry.py  starter.py
src/naqsha/trace/: __init__.py  base.py  jsonl.py
src/naqsha/tracing/: __init__.py  jsonl.py  span.py  store.py
src/naqsha/tracing/protocols/: nap.py  qaoa.py
src/naqsha/tui/: __init__.py  app.py  command_center.py  command_center.tcss  session.py  workbench.tcss
src/naqsha/tui/panels/: __init__.py  budget.py  chat.py  flame.py  memory.py  patch_review.py  span_tree.py
src/naqsha/workbench/: __init__.py
tests/: test_agent_workbench.py  test_anthropic_model.py  test_cli.py  test_gemini_model.py  test_guardrails.py  test_memory_port.py  test_memory_simplemem_cross.py  test_openai_compat_model.py  test_packaging_install.py  test_policy_and_trace.py  test_profiles.py  test_protocols.py  test_reflection_loop.py  test_runtime.py  test_sanitizer.py  test_starter_tools.py  test_trace_replay.py  test_trace_turns.py
tests/core/: test_circuit_breaker.py  test_event_bus.py  test_runtime_bus_stream.py
tests/live_network/: test_openai_sandbox_live.py
tests/memory/: test_ddl.py  test_engine.py  test_retrieval.py  test_scope.py
tests/models/: test_ollama.py
tests/orchestration/: test_delegation.py  test_role_policy.py
tests/redteam/: test_corpus.py
tests/reflection/: test_auto_merge.py  test_human_patch_approve.py  test_rollback.py
tests/tools/: test_decorator.py  test_error_escalation.py  test_executor.py  test_integration.py  test_memory_schema.py  test_registry.py
tests/tracing/: test_hierarchical_trace.py
tests/tui/: __init__.py  test_flame.py  test_memory_browser.py  test_panels.py  test_patch_review.py  test_wizard.py
(+3 files in other folders)
