[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naqsha"
version = "0.2.0"
description = "Inspectable Python agent runtime with strict tool contracts, hierarchical QAOA traces, dynamic memory, multi-agent teams, and a rich Workbench TUI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "NAQSHA contributors" }]
keywords = ["agents", "runtime", "react", "tools", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = ["pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/KM-Alee/naqsha"
Documentation = "https://km-alee.github.io/naqsha/"
Repository = "https://github.com/KM-Alee/naqsha"
Issues = "https://github.com/KM-Alee/naqsha/issues"
Changelog = "https://github.com/KM-Alee/naqsha/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mkdocs-gen-files>=0.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.8",
  "rich>=13.7",
  "textual>=0.86",
  "twine>=6",
]
tui = ["textual>=0.86", "rich>=13.7"]
memory = []
# Reserved for richer HTTP/search backends; starter web tools use the stdlib only.
web = []

[project.scripts]
naqsha = "naqsha.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/naqsha"]

[tool.hatch.build.targets.sdist]
include = ["LICENSE", "README.md", "/pyproject.toml", "/mkdocs.yml", "/src", "/docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["live_network: paid live API/tool tests (use NAQSHA_LIVE=1 + OPENAI_API_KEY)"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
